{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 63,
  "lineage": "17674620-876c-ff10-d14f-14b3fc7e970c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:369351180835:instance/i-01a652443bea7ac0c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a652443bea7ac0c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a752d3b54ecb1b8a",
            "private_dns": "ip-10-0-10-121.ec2.internal",
            "private_ip": "10.0.10.121",
            "public_ip": "3.82.18.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0402bbcc2a233f1fc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02278fa39ea398585",
            "tags": {
              "Name": "Development-server"
            },
            "tags_all": {
              "Name": "Development-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b9cb91f554e4dfc"
            ]
          },
          "dependencies": [
            "aws_key_pair.myapp-ssh-key",
            "aws_security_group.myapp-SG",
            "aws_subnet.myapp-Pub-SN",
            "aws_vpc.myapp-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369351180835:internet-gateway/igw-0b85e5852dbddc57d",
            "id": "igw-0b85e5852dbddc57d",
            "owner_id": "369351180835",
            "tags": {
              "Name": "Development-IGW"
            },
            "tags_all": {
              "Name": "Development-IGW"
            },
            "vpc_id": "vpc-0387021dfe4956a60"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myapp-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369351180835:route-table/rtb-03d0ce6ae24056561",
            "id": "rtb-03d0ce6ae24056561",
            "owner_id": "369351180835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b85e5852dbddc57d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Development-RT"
            },
            "tags_all": {
              "Name": "Development-RT"
            },
            "vpc_id": "vpc-0387021dfe4956a60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myapp-IGW",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myapp-RT-Assoc-with-Pub_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b65791d1b81b831f",
            "route_table_id": "rtb-03d0ce6ae24056561",
            "subnet_id": "subnet-02278fa39ea398585"
          },
          "dependencies": [
            "aws_internet_gateway.myapp-IGW",
            "aws_route_table.myapp-RT",
            "aws_subnet.myapp-Pub-SN",
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369351180835:security-group/sg-03b9cb91f554e4dfc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b9cb91f554e4dfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "68.47.191.55/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myapp-SG",
            "name_prefix": "",
            "owner_id": "369351180835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Development-SG"
            },
            "tags_all": {
              "Name": "Development-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0387021dfe4956a60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp-Priv-SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369351180835:subnet/subnet-090b5adfd3a2f003f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-090b5adfd3a2f003f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369351180835",
            "tags": {
              "Name": "Development-Priv-SN"
            },
            "tags_all": {
              "Name": "Development-Priv-SN"
            },
            "vpc_id": "vpc-0387021dfe4956a60"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp-Pub-SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369351180835:subnet/subnet-02278fa39ea398585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-02278fa39ea398585",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369351180835",
            "tags": {
              "Name": "Development-Pub-SN"
            },
            "tags_all": {
              "Name": "Development-Pub-SN"
            },
            "vpc_id": "vpc-0387021dfe4956a60"
          },
          "dependencies": [
            "aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:369351180835:vpc/vpc-0387021dfe4956a60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0144d8964267588fe",
            "default_route_table_id": "rtb-03e48ef04671f3cce",
            "default_security_group_id": "sg-0ff764dc8d19c6838",
            "dhcp_options_id": "dopt-e700499d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0387021dfe4956a60",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03e48ef04671f3cce",
            "owner_id": "369351180835",
            "tags": {
              "Name": "Development-vpc"
            },
            "tags_all": {
              "Name": "Development-vpc"
            }
          }
        }
      ]
    }
  ]
}